white space rendering issue

--- a/src/components/PersonalPage/PersonalPage.css
+++ b/src/components/PersonalPage/PersonalPage.css
@@ -20,5 +20,6 @@ header {
   margin: auto;
   max-width: 800px;
   text-align: left;
+  white-space: pre-line;
   width: 80%;
 }
